force-app/main/default/objects/Logistics_Booking__c/Logistics_Booking__c.object-meta.xml
<CustomObject>
    <label>Logistics Booking</label>
    <nameField>
        <displayFormat>LB-{000000}</displayFormat>
        <label>Logistics Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logistics Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>