force-app/main/default/objects/Logistics_Booking__c/fields/Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Accommodation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accommodation</label>
    <referenceTo>Accommodation__c</referenceTo>
    <relationshipLabel>Logistics Bookings</relationshipLabel>
    <relationshipName>Accommodation_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>