force-app/main/default/objects/Logistics_Booking__c/fields/HSS_Cost__c.field-meta.xml
<CustomField>
    <fullName>HSS_Cost__c</fullName>
    <label>HSS Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>