force-app/main/default/objects/Logistics_Booking__c/fields/Meal__c.field-meta.xml
<CustomField>
    <fullName>Meal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meal</label>
    <referenceTo>Meal__c</referenceTo>
    <relationshipLabel>Logistics Bookings</relationshipLabel>
    <relationshipName>Logistics_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>