force-app/main/default/objects/Logistics_Booking__c/fields/Number_of_Passenger__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passenger__c</fullName>
    <label>Number of Passenger</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>