force-app/main/default/objects/Logistics_Booking__c/fields/Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Items__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line Items</label>
    <referenceTo>Order_Line_Items__c</referenceTo>
    <relationshipLabel>Logistics Bookings</relationshipLabel>
    <relationshipName>Accommodation_Booking</relationshipName>
    <type>Lookup</type>
</CustomField>