force-app/main/default/objects/Logistics_Booking__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arrival Early</fullName>
            </value>
            <value>
                <fullName>Stay Behind</fullName>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>