force-app/main/default/objects/Logistics_Booking__c/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <externalId>true</externalId>
    <label>Unique Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>